--- a/.example.env
+++ b/.example.env
@@ -1,7 +1,8 @@
 # Bot Environment
 BOT_TOKEN="<your-bot-token>"
-LOCAL_BOT_API_URL="http://127.0.0.1:8081"
-BOT_API_DIR="./bot-api/"   # Directory path where the local Telegram Bot API files are stored
+TELEGRAM_LOCAL=True         # Set to False to use Telegram's hosted Bot API
+LOCAL_BOT_API_URL="http://127.0.0.1:8081"   # Required only when TELEGRAM_LOCAL=True
+BOT_API_DIR="./bot-api/"   # Required only when TELEGRAM_LOCAL=True
 DOWNLOAD_TO_DIR="./downloads/"
 USER_ID=1234567890         # Change to your user ID
 CHAT_ID=1234567890         # Change to your user ID (DM with bot) or a group ID
@@ -9,4 +10,3 @@ CHAT_ID=1234567890         # Change to your user ID (DM with bot) or a group ID
 # Local API Environment
 TELEGRAM_API_ID=<your-telegram-api-id>
 TELEGRAM_API_HASH="<your-telegram-api-hash>"
-TELEGRAM_LOCAL=True
