--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,6 @@
 # Bot Environment
 BOT_TOKEN="<your-bot-token>"
-TELEGRAM_LOCAL=True         # Set to False to use Telegram's hosted Bot API
+TELEGRAM_LOCAL=True         # Set to False to use Telegram's hosted Bot API (fallback happens automatically if the local server is unreachable)
 LOCAL_BOT_API_URL="http://127.0.0.1:8081"   # Required only when TELEGRAM_LOCAL=True
 BOT_API_DIR="./bot-api/"   # Required only when TELEGRAM_LOCAL=True
 DOWNLOAD_TO_DIR="./downloads/"
